2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button),
	(murrine_draw_menuitem), (murrine_draw_scrollbar_stepper):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_scrollbar_stepper):
	Always clip with roundness = 0 or 1.
	This could be slower with roundness = 0 or 1:
	please TEST and tell me if there is a performance regression.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_trough),
	(murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_trough),
	(murrine_rgba_draw_progressbar_fill):
	* src/murrine_rc_style.c (murrine_rc_style_parse):
	* src/murrine_style.c (murrine_style_draw_box):
	* src/murrine_types.h:
	First approach with rounded scrollbars.
	Print more info when using an old option.

2008-12-30  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/murrine.xml.in.in:
	* src/cairo-support.c (murrine_draw_glaze), (get_decreased_shade),
	(get_increased_shade), (get_decreased_gradient_shades):
	* src/cairo-support.h:
	* src/murrine_draw.c (murrine_draw_button),
	(murrine_draw_progressbar_fill), (murrine_draw_menubar),
	(murrine_draw_toolbar), (murrine_draw_tab),
	(murrine_draw_list_view_header), (murrine_draw_menuitem),
	(murrine_draw_scrollbar_stepper), (murrine_draw_scrollbar_slider),
	(murrine_draw_radiobutton), (murrine_draw_checkbox):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_progressbar_fill), (murrine_rgba_draw_menubar),
	(murrine_rgba_draw_toolbar), (murrine_rgba_draw_tab),
	(murrine_rgba_draw_scrollbar_stepper),
	(murrine_rgba_draw_scrollbar_slider),
	(murrine_rgba_draw_radiobutton), (murrine_rgba_draw_checkbox):
	* src/murrine_rc_style.c (murrine_rc_style_init),
	(theme_parse_shade), (murrine_rc_style_parse),
	(murrine_rc_style_merge):
	* src/murrine_rc_style.h:
	* src/murrine_style.c (murrine_set_widget_parameters),